feat: Validate subscription requests.
